[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "html_write_alefebvre"
version = "0.0.1"
authors = [
  { name="Antoine Lefebvre", email="darkantoine@gmail.com" },
]
description = "A package for writing HTML code"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/darkantoine/htmlwriter"
"Bug Tracker" = "https://github.com/darkantoine/htmlwriter/issues"